<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Contributors_background"
    tools:context="com.dcv.spdesigns.dokkancards.presenter.ContributorsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:layout_marginStart="15dp"
            android:background="@color/Contributors_background"
            android:paddingTop="8dp"
            android:text="Thanks for your help\n friends"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:background="#f0f0f0"
            android:paddingTop="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:divider="?dividerHorizontal"
                android:showDividers="middle">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#e8e8e8"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:text="Database Contributors"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="monospace"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Savion_Francisco"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:fontFamily="monospace"
                    android:text="@string/ZainWD"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:fontFamily="monospace"
                    android:text="@string/YouHavingAGiggle"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:fontFamily="monospace"
                    android:text="@string/Nathanael"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:fontFamily="monospace"
                    android:text="@string/Boomzilla"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:fontFamily="monospace"
                    android:text="@string/Darkrisin"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:fontFamily="monospace"
                    android:text="@string/Kyle_Green"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:fontFamily="monospace"
                    android:text="@string/Maxence_Payno"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:fontFamily="monospace"
                    android:text="@string/Shane_Humpleby"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#e8e8e8"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:text="Alpha Testers"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="monospace"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Savion_Francisco"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="monospace"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Andrew_Gravelle"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="monospace"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Hamza_Kariohi"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="monospace"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Javier_Hernandez"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="monospace"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Cijykik_Naloxone"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="monospace"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Jared_Shaffer"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="monospace"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Joren_Van_Der_Heyden"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="monospace"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/Bruno_Silva"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
